--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@asymmetrik/ngx-leaflet": "^3.0.1",
     "@nebular/auth": "11.0.1",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/security": "11.0.1",
@@ -73,7 +73,7 @@
     "socicon": "3.0.5",
     "style-loader": "^1.3.0",
     "tinymce": "4.5.7",
-    "tslib": "^2.3.1",
+    "tslib": "^2.8.1",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
